# osdev

.github/workflows/: haskell.yml  hlint.yml
radon/: .ghci  .ghcid  AST.hs  CHANGELOG.md  CodeGen.hs  Main.hs  Parser.hs  PrettyC.hs  README.md  kernel.ra  kernel2.c  main.c  main.ra  radon.cabal  scratch.hs
radon/app/: Compiler.hs  Main.hs  REPL.hs
radon/doc/source/: conf.py  index.rst
radon/doc/source/usage/: compilation.rst  syntax.rst
radon/prelude/: Prelude.hs
radon/src/: AST.hs  CodeGen.hs  Parser.hs  Prelude.hs  TypeCheck.hs
radon/src/AST/: Base.hs  Expression.hs  NodeSource.hs  Statement.hs  TopLevel.hs
radon/src/AST/Phases/: EnrichedC.hs  Parsed.hs  Typed.hs  Undecorated.hs
radon/src/Analyzers/: Analyzer.hs  Graphviz.hs
radon/src/CodeGen/C/: Common.hs  Expression.hs  Pretty.hs  Statement.hs  TopLevel.hs  Type.hs
radon/src/Enrich/: C.hs
radon/src/Parser/: Common.hs  Embedded.hs  Expression.hs  Statement.hs  TopLevel.hs  Type.hs
radon/src/Resolvers/: Resolver.hs
radon/src/Resolvers/C/: FunctionAlias.hs
radon/src/Rewriters/: Rewriter.hs
radon/src/Rewriters/C/: FunctionAlias.hs
radon/stdlib/: console.ra  types.ra
radon/stdlib/http/: request.ra
radon/test/: ParserSpec.hs
radon/test/Parser/: ExpressionSpec.hs  StatementSpec.hs  TopLevelSpec.hs  TypeSpec.hs  Utils.hs
