cabal-version:       >=1.10
name:                radon
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Ashley Towns
maintainer:          mail@ashleytowns.id.au
build-type:          Simple
extra-source-files:  CHANGELOG.md
                   , README.md
homepage:            https://github.com/aktowns/osdev
bug-reports:         https://github.com/aktowns/osdev/issues
category:            Language
synopsis:            A Compile to C language
description:

  A toy compile to C language that xenon is implemented in.

library
  exposed-modules:     Analyzers.Analyzer
                     , Analyzers.Graphviz
                     , AST
                     , CodeGen
                     , CodeGen.C.Common
                     , CodeGen.C.Expression
                     , CodeGen.C.Pretty
                     , CodeGen.C.Statement
                     , CodeGen.C.TopLevel
                     , CodeGen.C.Type
                     , Parser
                     , Parser.Common
                     , Parser.Embedded
                     , Parser.Expression
                     , Parser.Statement
                     , Parser.TopLevel
                     , Parser.Type
                     , Rewriters.C.FunctionAlias
                     , Rewriters.Rewriter
  build-depends:       base >=4.13 && <4.14
                     , megaparsec
                     , language-c
                     , language-javascript
                     , pretty-simple
                     , bifunctors
                     , text
                     , pretty
                     , containers
                     , parser-combinators
                     , temporary
                     , dot
                     , random
  hs-source-dirs:      src
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wpartial-fields -Widentities -Wredundant-constraints -Wmonomorphism-restriction -Wmissing-local-signatures
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable radon
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14
                     , radon
                     , pretty
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded

test-suite test-radon
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  other-modules:       Parser.ExpressionSpec
                     , Parser.StatementSpec
                     , Parser.TopLevelSpec
                     , Parser.TypeSpec
                     , Parser.Utils
                     , ParserSpec
  build-depends:       base >=4.13 && <4.14
                     , radon
                     , hspec
                     , hspec-megaparsec
                     , megaparsec
                     , raw-strings-qq
                     , text
  default-language:    Haskell2010
  build-tool-depends:  hspec-discover:hspec-discover == 2.*
  ghc-options:         -Wall
